[gd_scene load_steps=8 format=3 uid="uid://dmb0v06707pab"]

[ext_resource type="Script" path="res://core/scripts/level.gd" id="1_exgqk"]
[ext_resource type="PackedScene" uid="uid://xjcnpf3inm4w" path="res://core/map.tscn" id="2_2aprj"]
[ext_resource type="Script" path="res://core/scripts/camera.gd" id="3_hj4ot"]
[ext_resource type="PackedScene" uid="uid://whyqrx8a4kgj" path="res://ui/HUD.tscn" id="4_rackh"]
[ext_resource type="Script" path="res://ui/scripts/end_game_dialog.gd" id="5_txawa"]

[sub_resource type="Gradient" id="Gradient_ecnip"]
colors = PackedColorArray(0, 0, 0, 1, 0.18359, 0.18359, 0.18359, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_67l4a"]
gradient = SubResource("Gradient_ecnip")
fill_from = Vector2(0.310976, 1)
fill_to = Vector2(0.609756, 0.0243902)

[node name="Level" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_exgqk")

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("3_hj4ot")

[node name="BackgroundTextureRect" type="TextureRect" parent="Camera"]
show_behind_parent = true
z_index = -2
y_sort_enabled = true
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_67l4a")
expand_mode = 1

[node name="Map" parent="." instance=ExtResource("2_2aprj")]

[node name="TurnPauseTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" parent="." instance=ExtResource("4_rackh")]
visible = false

[node name="EndGameDialog" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "GAME OVER"
initial_position = 1
size = Vector2i(282, 100)
dialog_text = "TREASURE LOOTED SUCCESSFULLY"
script = ExtResource("5_txawa")

[connection signal="enable_ui" from="." to="Camera" method="_on_level_enable_ui"]
[connection signal="enable_ui" from="." to="HUD" method="_on_level_enable_ui"]
[connection signal="inc_turn_counter" from="." to="HUD" method="_on_level_inc_turn_counter"]
[connection signal="new_turn_order" from="." to="HUD" method="_on_node_new_turn_order"]
[connection signal="init_camera" from="Map" to="Camera" method="_on_map_init_camera"]
[connection signal="timeout" from="TurnPauseTimer" to="." method="_on_timer_timeout"]
[connection signal="ability_pressed" from="HUD" to="." method="_on_hud_ability_pressed"]
[connection signal="button_pressed" from="HUD" to="." method="_on_hud_button_pressed"]
[connection signal="embark_active" from="HUD" to="." method="_on_hud_embark_active"]
[connection signal="end_turn" from="HUD" to="." method="_on_hud_end_turn"]
[connection signal="inventory_pressed" from="HUD" to="." method="_on_hud_inventory_pressed"]
[connection signal="spell_pressed" from="HUD" to="." method="_on_hud_spell_pressed"]
[connection signal="confirmed" from="EndGameDialog" to="EndGameDialog" method="_on_confirmed"]

[editable path="Map"]
